@@ -1,3 +1,6 @@
 - better MySQL support
 - fix unit tests for other databases than PostgreSQL (MySQL and SQLite
   fail at test_changeset.test_fk(..))
+- document dotted_name parsing changes
+- document shell parsing
+- document engine parameters usage/parsing
